# SentinelAI

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  audit.py  auth.py  chat.py  documents.py  gateway.py  models.py  security.py  ws_chat.py
backend/app/core/: cache.py  config.py  database.py  dependencies.py  security.py
backend/app/gateway/: __init__.py  circuit_breaker.py  models.py  rate_limiter.py  router.py
backend/app/gateway/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  ollama_provider.py  openai_provider.py
backend/app/guardrails/: __init__.py  manager.py
backend/app/guardrails/config/: config.yml  rails.co
backend/app/middleware/: __init__.py  rate_limiter.py  security_headers.py
backend/app/models/: __init__.py  attack.py  audit.py  chat.py  document.py  model_config.py  user.py
backend/app/rag/: __init__.py  chunker.py  embeddings.py  extractor.py  pipeline.py  vector_store.py
backend/app/repositories/: audit_repository.py  model_repository.py  user_repository.py
backend/app/schemas/: auth.py  chat.py  document.py
backend/app/security/: __init__.py  config.py  engine.py  scoring.py
backend/app/security/detectors/: __init__.py  base.py  heuristics.py  injection.py  jailbreak.py  sensitive_data.py
backend/app/security/filters/: __init__.py  response_filter.py
backend/app/services/: chat_service.py  document_service.py  model_router.py  security_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_health.py  test_auth_flow.py
backend/tests/security/: test_owasp_llm_top10.py
backend/tests/unit/: test_chunker.py  test_heuristic_analyzer.py  test_injection_detector.py  test_jailbreak_detector.py  test_response_filter.py  test_security_engine.py  test_security_service.py  test_sensitive_data_detector.py  test_text_extractor.py
docs/: developer-guide.md  runbook.md
docs/adr/: 001-fastapi-backend.md  002-multi-provider-gateway.md  003-security-engine-design.md  004-rag-with-pgvector.md  005-kubernetes-deployment.md
docs/api/: openapi-spec.yml
docs/architecture/: ARCHITECTURE.md  DIAGRAM.md  README.md  sentinelai-architecture.drawio
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/e2e/: playwright.config.ts
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
scripts/: deploy.sh  init-db.sql  security-scan.sh  seed-db.py  setup-dev.sh
(+49 files in other folders)
